# CMDkit

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.txt  cmdkit.code-workspace
.github/workflows/: ci.yml
cmdkit-macros/: Cargo.toml
cmdkit-macros/src/: lib.rs
cmdkit-macros/tests/: functionality_macro_suite.rs
cmdkit-master/: Cargo.toml  README.md
cmdkit-master/src/: cmdkit.rs  lib.rs
functionality_macro/: Cargo.toml
functionality_macro/src/: lib.rs
src/: cli.rs  core.rs  lib.rs
src/cli/: command.rs  error.rs  help.rs  mod.rs  registry.rs  strategy.rs
src/cli/error/: tests.rs
src/cli/strategy/: tests.rs
src/core/: tests.rs
tests/: cli_suite.rs  clicore_suite.rs  command_suit.rs  functionality_macro_suite.rs
