[package]
name = "cli-core"
version = "0.1.0"
edition = "2024"
description = "Core library for CLI tools, providing common functionality and utilities for building command-line applications."
license = "GPL-3.0-or-later"
repository = "https://github.com/JackLanger/Cli-Core"
documentation = "https://docs.rs/cli-core"
keywords = ["cli", "command", "framework", "parser"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "wrapper_probe"
path = "src/bin/wrapper_probe.rs"


[dependencies]
