[package]
name = "cmdkit"
version = "0.3.0"
edition = "2024"
description = "Deterministic command execution runtime for structured command graphs with configurable execution topology."
license = "GPL-3.0-or-later"
repository = "https://github.com/JackLanger/CMDkit"
documentation = "https://docs.rs/cmdkit"
keywords = [
    "runtime",
    "dispatch",
    "string-based",
    "deterministic",
    "orchestration",
]
categories = ["asynchronous", "concurrency", "development-tools"]
readme = "README.md"

[[bin]]
name = "wrapper_probe"
path = "src/bin/wrapper_probe.rs"


[dependencies]
