[package]
name = "cmdkit"
version = "0.2.0"
edition = "2024"
description = "Core library for CLI tools, providing common functionality and utilities for building command-line applications."
license = "Apache-2.0"
repository = "https://github.com/JackLanger/CMDkit"
documentation = "https://docs.rs/cmdkit"
keywords = ["cli", "command", "framework", "parser"]
categories = ["command-line-interface", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "wrapper_probe"
path = "src/bin/wrapper_probe.rs"


[dependencies]
