[package]
name = "cmdkit-macros"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for cmdkit command strategy generation."
license = "GPL-3.0-or-later"
repository = "https://github.com/JackLanger/CMDKit"
documentation = "https://docs.rs/cmdkit-macros"
keywords = ["cli", "macro", "proc-macro"]
categories = [
    "development-tools::procedural-macro-helpers",
    "command-line-interface",
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
cli-core = { path = ".." }
